@@ -41,8 +41,17 @@
   <% end -%>
   </ol>
   <p class="form-footer">
+    <%
+      reset_attrs = {class: 'reset'}
+      if active_scaffold_config.field_search.reset_form
+        reset_attrs[:data] = {reset: true}
+      else
+        reset_attrs[:class] << ' as_cancel'
+        reset_attrs.merge! remote: true, data: {refresh: true}
+      end
+    %>
     <%= submit_tag as_(submit_text), :class => "submit" %>
-    <%= link_to as_(:reset), url_for(url_options.merge(:search => '')), :class => 'as_cancel reset', :remote => true, :data => {:refresh => true} unless local_assigns[:skip_reset] %>
+    <%= link_to as_(:reset), url_for(url_options.merge(:search => '')), reset_attrs unless local_assigns[:skip_reset] %>
     <%= loading_indicator_tag(:action => :search) %>
   </p>
 </form>
