@@ -21,6 +21,14 @@
   <% end -%>
   <%= search_field_tag :search, (search_params if search_params.is_a? String), :class => 'text-input', :id => search_input_id, :size => 50, :autocomplete => :off, :placeholder => as_(live_search ? :live_search : :search_terms) %>
   <%= submit_tag as_(submit_text), :class => "submit", :style => ('display:none;' if live_search) %>
-  <%= link_to as_(:reset), url_for(url_options.merge(:search => '')), :class => 'as_cancel reset', :remote => true, :data => {:refresh => true} unless local_assigns[:skip_reset] %>
+  <%
+    reset_attrs = {class: 'as_cancel reset'}
+    if active_scaffold_config.field_search.reset_form
+      reset_attrs[:data] = {reset: true}
+    else
+      reset_attrs.merge! remote: true, data: {refresh: true}
+    end
+  %>
+  <%= link_to as_(:reset), url_for(url_options.merge(:search => '')), reset_attrs unless local_assigns[:skip_reset] %>
   <%= loading_indicator_tag(:action => :search) %>
 <% end %>
